--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -3486,6 +3486,9 @@
     <ClCompile Include="Baekjoon\13.Kruskal\2.Gold\1368.cpp">
       <Filter>Baekjoon\13.Kruskal\2.Gold</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\4.BFS\1.Silver\3184.cpp">
+      <Filter>Baekjoon\4.BFS\1.Silver</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Baekjoon\97.Rank\0.Bronze\13277.py">
