--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -3516,6 +3516,9 @@
     <ClCompile Include="Baekjoon\5.BinarySearch\2.Gold\3745.cpp">
       <Filter>Baekjoon\5.BinarySearch\2.Gold</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\14.Tree\1.Silver\9934.cpp">
+      <Filter>Baekjoon\14.Tree\1.Silver</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Baekjoon\97.Rank\0.Bronze\13277.py">
