--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -3561,6 +3561,9 @@
     <ClCompile Include="Baekjoon\0.DataStructure\1.Silver\1822.cpp">
       <Filter>Baekjoon\0.DataStructure\1.Silver</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\4.BFS\2.Gold\11559.cpp">
+      <Filter>Baekjoon\4.BFS\2.Gold</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Baekjoon\97.Rank\0.Bronze\13277.py">
