--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -3573,6 +3573,9 @@
     <ClCompile Include="Baekjoon\4.BFS\1.Silver\24444.cpp">
       <Filter>Baekjoon\4.BFS\1.Silver</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\12.Floyd-warshall\2.Gold\2610.cpp">
+      <Filter>Baekjoon\12.Floyd-warshall\2.Gold</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Baekjoon\97.Rank\0.Bronze\13277.py">
