--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -3591,6 +3591,9 @@
     <ClCompile Include="Baekjoon\6.Bruteforce\1.Silver\2670.cpp">
       <Filter>Baekjoon\6.Bruteforce\1.Silver</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\7.Sorting\2.Gold\2230.cpp">
+      <Filter>Baekjoon\7.Sorting\2.Gold</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Baekjoon\97.Rank\0.Bronze\13277.py">
