--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -3612,6 +3612,9 @@
     <ClCompile Include="Baekjoon\6.Bruteforce\1.Silver\2961.cpp">
       <Filter>Baekjoon\6.Bruteforce\1.Silver</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\15.NumberTheory\2.Gold\4355.cpp">
+      <Filter>Baekjoon\15.NumberTheory\2.Gold</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Baekjoon\97.Rank\0.Bronze\13277.py">
