--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -3624,6 +3624,9 @@
     <ClCompile Include="Baekjoon\1.DynamicProgramming\2.Gold\5582.cpp">
       <Filter>Baekjoon\1.DynamicProgramming\2.Gold</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\16.Combinatorics\1.Silver\16395.cpp">
+      <Filter>Baekjoon\16.Combinatorics\1.Silver</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Baekjoon\97.Rank\0.Bronze\13277.py">
