--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -3651,6 +3651,10 @@
     <ClCompile Include="Baekjoon\7.Sorting\1.Silver\1758.cpp">
       <Filter>Baekjoon\7.Sorting\1.Silver</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\12.Floyd-warshall\2.Gold\2458.cpp" />
+    <ClCompile Include="Baekjoon\97.Rank\1.Silver\9996.cpp">
+      <Filter>Baekjoon\97.Rank\1.Silver</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Baekjoon\97.Rank\0.Bronze\13277.py">
