--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -3718,6 +3718,9 @@
     <ClCompile Include="Baekjoon\1.DynamicProgramming\2.Gold\1106.cpp">
       <Filter>Baekjoon\1.DynamicProgramming\2.Gold</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\0.DataStructure\3.Platinum\6549.cpp">
+      <Filter>Baekjoon\0.DataStructure\3.Platinum</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Baekjoon\97.Rank\0.Bronze\13277.py">
