--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -3722,6 +3722,7 @@
       <Filter>Baekjoon\0.DataStructure\3.Platinum</Filter>
     </ClCompile>
     <ClCompile Include="Baekjoon\97.Rank\3.Platinum\1786.cpp" />
+    <ClCompile Include="Baekjoon\0.DataStructure\3.Platinum\3015.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Baekjoon\97.Rank\0.Bronze\13277.py">
